client/src/components/SubmitPrice.scss
.PriceSubmit {
  display: flex;
  flex-grow: 2;
  flex-direction: column;
  align-items: flex-start;
  padding-left: 2rem;
  padding-top: 1.2rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.PriceMain {
  flex-direction: column;
  margin-top: 1rem;
  background-color: #CEE2F3;
  width: 40rem;
  height: 32.5rem;
  justify-content: space-evenly;
  align-items: flex-start;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1rem;
  border-radius: 1rem;
  border-width: 3px;
  border-style: solid;
  border-color: #54a0ff;
  font-size: 1rem;
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  padding-bottom: 1rem;
}

.VerticalAlign {
  display: flex;
  flex-direction: column;
  
}

.StationBorder {
  border-width: 3px;
  border-style: solid;
  border-color: #54a0ff;
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
}

.PriceFields {
  display: flex;
  flex-grow: 2;
  flex-direction: column;
  align-items: center;
  padding-left: 2rem;
  padding-top: 1.2rem;
  padding-right: 1rem;
  padding-top: 0.70rem;
  padding-bottom: 0.70rem;
}

.MarginPrice {
  margin-top: -0.75rem;
}

.PriceBgColor {
  background-color: #E6ECF2;
}

